add basic styling

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,24 @@
 @import url("reset.css");
 
 body {
+  font-family: Helvetica;
+}
 
+
+nav {
+  width: 100vw;
+  background-color: gray; 
+  height: 15vh;
+}
+
+.tab-list {
+  display: flex;
+  justify-content: space-evenly;
+  list-style-type: none;
+}
+
+#footer {
+  width: 100vw;
+  background-color: gray; 
+  height: 5vh;
 }
